Fixed button shifting on long topic

--- a/style.css
+++ b/style.css
@@ -2,26 +2,27 @@
     background-color: lightGray;
     border-radius: 25px;
     font-weight: bold;
-    height: 100px;
+    height: 115px;
     padding-left: 1%;
     padding-right: 1%;
-    width: 100px;
+	vertical-align: top;
+    width: 115px;
 }
 
 .selected {
     background-color: lightBlue;
-    height: 95px;
-    width: 95px;
+    height: 110px;
+    width: 110px;
 }
 
 .row {
     border-radius: 25px;
-    height: 100px;
+    height: 125px;
     margin-top: 2%;
     padding-left: 1%;
     padding-right: 1%;
     text-align: center;
-    width: 400px;
+    width: 450px;
 }
 
 #popup {
